feat: treat geojson conversion asynchronously